--- a/src/app/navigation/matches/matchesNavigation.html
+++ b/src/app/navigation/matches/matchesNavigation.html
@@ -125,7 +125,7 @@
                                                 <div class="col-md-12 margin-top-10">
                                                     <button type="button"
                                                             class="pull-left btn btn-sm btn-outline custom-button"><span
-                                                            class="btn-label-text" ng-click="agefilter()">Submit</span></button>
+                                                            class="btn-label-text" ng-click="search()">Submit</span></button>
                                                 </div>
                                             </div>
                                         </div>
@@ -206,7 +206,7 @@
                                         <div class="col-md-4 margin-bottom-10">
                                             <div class="row">
                                                 <div class="col-md-12 margin-top-10">
-                                                    <select class="custom-form-control" ng-model="height.end">
+                                                    <select class="custom-form-control"  ng-model="height.end">
                                                         <option value="140">140</option>
                                                         <option value="141">141</option>
                                                         <option value="142">142</option>
@@ -269,7 +269,7 @@
                                                 <div class="col-md-12 margin-top-10">
                                                     <button type="button"
                                                             class="pull-left btn btn-sm btn-outline custom-button"><span
-                                                            class="btn-label-text" ng-click="heightfilter()">Submit</span></button>
+                                                            class="btn-label-text" ng-click="search()">Submit</span></button>
                                                 </div>
                                             </div>
                                         </div>
