--- a/src/app/navigation/matches/matchesNavigation.html
+++ b/src/app/navigation/matches/matchesNavigation.html
@@ -461,7 +461,7 @@
                                             <div class="row">
                                                 <div class="col-md-12">
                                                     <span ng-if="populate.occupation.length > ocucount" class="show-more-less pull-left" ng-click="showMoreMStatus('ocucount','more')">More</span>
-                                                    <span ng-if="ocucount != 4" class="show-more-less pull-right" ng-click="showMoreMStatus('ocucount','less')">Less</span>
+                                                    <span ng-if="populate.occupation.length != 4" class="show-more-less pull-right" ng-click="showMoreMStatus('ocucount','less')">Less</span>
                                                 </div>
                                             </div>
                                         </div>
