--- a/src/app/main/matches/matches.html
+++ b/src/app/main/matches/matches.html
@@ -99,7 +99,7 @@
                         <div class="portlet-body form">
                             <div class="row">
                                 <div class="col-md-4" style="text-align: center;">
-                                    <imageinfo images="item.images" gender="item.gender"></imageinfo>
+                                    <imageinfo images="images" gender="item.gender"></imageinfo>
 
                                 </div>
                                 <div class="col-md-8">
