--- a/src/app/main/searchresults/searchresults.html
+++ b/src/app/main/searchresults/searchresults.html
@@ -58,6 +58,11 @@
 
                         </div>
                     </div>
+                    <div  ng-if="showResult" class="portlet light  border-rounded ">
+                        <div class="alert alert-success">
+                            No results found
+                        </div>
+                    </div>
 
 
 
