--- a/src/app/main/search/regular/regular.html
+++ b/src/app/main/search/regular/regular.html
@@ -307,7 +307,7 @@
                             <div class="form-group">
                                 <label class=" uppercase font-weight col-md-12 "> Marital Status</label>
 
-                                <div class="col-md-12">
+                                <!--<div class="col-md-12">
                                     <label class="checkbox-inline" class="custon-text">
                                         <input type="checkbox" icheckbox_flat-red class="icheck " ng-model="regular.maritalStatus.any">
                                         Any</label>
@@ -326,6 +326,28 @@
                                     <label class="checkbox-inline" class="custon-text">
                                         <input type="checkbox" icheckbox_flat-red class="icheck "
                                                ng-model="regular.maritalStatus.divorce_awaiting">
+                                        Divorce awaiting</label>
+                                </div>-->
+
+                                <div class="col-md-12">
+                                    <label class="checkbox-inline" class="custon-text">
+                                        <input type="radio" icheckbox_flat-red class="icheck " name="mstatus" value="any" ng-model="regular.maritalStatus">
+                                        Any</label>
+
+                                    <label class="checkbox-inline" class="custon-text">
+                                        <input type="radio" icheckbox_flat-red class="icheck " name="mstatus" value="unmarried" ng-model="regular.maritalStatus">
+                                        Unmarried</label>
+
+                                    <label class="checkbox-inline" class="custon-text">
+                                        <input type="radio" icheckbox_flat-red class="icheck " name="mstatus" value="widow" ng-model="regular.maritalStatus">
+                                        Widow</label>
+
+                                    <label class="checkbox-inline" class="custon-text">
+                                        <input type="radio" icheckbox_flat-red class="icheck " name="mstatus" value="divorced" ng-model="regular.maritalStatus">
+                                        Divorced</label>
+                                    <label class="checkbox-inline" class="custon-text">
+                                        <input type="radio" icheckbox_flat-red class="icheck " name="mstatus" value="divorceAwaiting"
+                                               ng-model="regular.maritalStatus">
                                         Divorce awaiting</label>
                                 </div>
                             </div>
@@ -354,15 +376,11 @@
                             <div class="form-group">
 
                                 <div class="col-md-6">
-                                    <label class=" uppercase font-weight "> Caste</label>
+                                    <label class=" uppercase font-weight "> Occupation</label>
 
-                                    <select class="form-control input-rounded ">
-                                        <option>Select</option>
-                                        <option>Cast 1</option>
-                                        <option>Cast 2</option>
-                                        <option>Cast 3</option>
-                                        <option>Cast 4</option>
-
+                                    <select multiple="multiple" class="multi-select form-control input-rounded "
+                                            ng-model="multiValue.occupation"
+                                            ng-options="item.occupation for item in occupation track by item.id_occupation">
                                     </select>
                                 </div>
 
