--- a/src/app/main/search/regular/regular.html
+++ b/src/app/main/search/regular/regular.html
@@ -472,10 +472,9 @@
                                         Save & Search
                                     </button>
 
-                                    <a ui-sref="searchresult" class=" btn red input-rounded"
-                                            >
+                                    <button type="button" class=" btn red input-rounded " ng-click="search()">
                                         Search
-                                    </a>
+                                    </button>
                                 </div>
                             </div>
 
