--- a/src/app/navigation/search/searchNavigation.html
+++ b/src/app/navigation/search/searchNavigation.html
@@ -17,7 +17,7 @@
                                 style="color: red">Delete</a></span>
                     </div>
                     <div class="col-md4" style="line-height: 50px;text-align: center">
-                        <button class="btn btn-sm red">Search</button>
+                        <button class="btn btn-sm red" ng-click="searchexist(item)">Search</button>
                     </div>
 
 
