--- a/src/app/main/search/regular/regular.html
+++ b/src/app/main/search/regular/regular.html
@@ -27,40 +27,39 @@
 
                                     <label class=" uppercase font-weight "> Age</label>
 
+
                                     <select class="form-control input-rounded " ng-model="regular.age_start">
-                                        <option>Select</option>
-                                        <option value="18">18</option>
-                                        <option value="19">19</option>
-                                        <option value="20">20</option>
-                                        <option value="21">21</option>
-                                        <option value="22">22</option>
-                                        <option value="23">23</option>
-                                        <option value="24">24</option>
-                                        <option value="25">25</option>
-                                        <option value="26">26</option>
-                                        <option value="27">27</option>
-                                        <option value="28">28</option>
-                                        <option value="29">29</option>
+                                        <option ng-selected ="regular.age_start == 18" ng-value="18">18</option>
+                                        <option ng-selected ="regular.age_start == 19" value="19">19</option>
+                                        <option ng-selected ="regular.age_start == 20" value="20">20</option>
+                                        <option ng-selected ="regular.age_start == 21" value="21">21</option>
+                                        <option ng-selected ="regular.age_start == 22" value="22">22</option>
+                                        <option ng-selected ="regular.age_start == 23" value="23">23</option>
+                                        <option ng-selected ="regular.age_start == 24" value="24">24</option>
+                                        <option ng-selected ="regular.age_start == 25" value="25">25</option>
+                                        <option ng-selected ="regular.age_start == 26" value="26">26</option>
+                                        <option ng-selected ="regular.age_start == 26" value="27">27</option>
+                                        <option ng-selected ="regular.age_start == 27" value="28">28</option>
+                                        <option ng-selected ="regular.age_start == 28" value="29">29</option>
                                     </select>
 
                                 </div>
                                 <div class="col-md-2">
                                     <label class=" uppercase font-weight "> &nbsp;</label>
 
-                                    <select class="form-control input-rounded " ng-model="regular.age_end">
-                                        <option>Select</option>
-                                        <option value="18">18</option>
-                                        <option value="19">19</option>
-                                        <option value="20">20</option>
-                                        <option value="21">21</option>
-                                        <option value="22">22</option>
-                                        <option value="23">23</option>
-                                        <option value="24">24</option>
-                                        <option value="25">25</option>
-                                        <option value="26">26</option>
-                                        <option value="27">27</option>
-                                        <option value="28">28</option>
-                                        <option value="29">29</option>
+                                    <select placeholder="select" class="form-control input-rounded " ng-model="regular.age_end">
+                                        <option ng-selected="regular.age_end == 18" ng-value="18">18</option>
+                                        <option ng-selected="regular.age_end == 19" value="19">19</option>
+                                        <option ng-selected="regular.age_end == 20" value="20">20</option>
+                                        <option ng-selected="regular.age_end == 21" value="21">21</option>
+                                        <option ng-selected="regular.age_end == 22" value="22">22</option>
+                                        <option ng-selected="regular.age_end == 23" value="23">23</option>
+                                        <option ng-selected="regular.age_end == 24" value="24">24</option>
+                                        <option ng-selected="regular.age_end == 25" value="25">25</option>
+                                        <option ng-selected="regular.age_end == 26" value="26">26</option>
+                                        <option ng-selected="regular.age_end == 26" value="27">27</option>
+                                        <option ng-selected="regular.age_end == 27" value="28">28</option>
+                                        <option ng-selected="regular.age_end == 28" value="29">29</option>
                                     </select>
 
                                 </div>
