--- a/src/app/toolbar/searchresults/searchresultstoolbar.html
+++ b/src/app/toolbar/searchresults/searchresultstoolbar.html
@@ -20,10 +20,10 @@
 					<ul class="tool-link">
 						<!--<li  ng-class="{ toolbarActive: isActive('/app')}"><a  ui-sref="app">MY HOME</a></li>-->
 						<li><a ui-sref="profile">HOME</a></li>
-						<li><a href="#contact">SEARCH</a></li>
-						<li><a href="#news">MATCHES</a></li>
-						<li><a href="#about">INBOX</a></li>
-						<li><a href="#about">MORE</a></li>
+						<li><a ui-sref="search">SEARCH</a></li>
+						<li><a ui-sref="matches">MATCHES</a></li>
+						<li><a ui-sref="messages">INBOX</a></li>
+						<!--<li><a href="#about">MORE</a></li>-->
 					</ul>
 				</div>
 
