--- a/src/app/main/managephotos/managephoto.html
+++ b/src/app/main/managephotos/managephoto.html
@@ -191,9 +191,11 @@
                                 <div class="thumbnail">
                                     <img style="height: 150px" ng-src="{{image.image}}" alt="{{image.description}}">
                                 </div>
-                                <div>
-                                    <input type="checkbox" ng-model="profilePic" ng-value="{{image.number}}"
-                                           ng-click="changeProfilePic(image)">
+                                <div  style="margin-top: -55px;margin-left: 15px;margin-bottom: 10px">
+                                    <a  ng-click="changeProfilePic(image)"><i class="icon-check" style="font-size: 20px"></i></a>
+                                    <a ng-click="removeProfilePic(image)"><i class="icon-close" style="font-size: 20px;color: red"></i></a>
+                                    <!--<input type="checkbox" ng-model="profilePic" ng-value="{{image.number}}"-->
+                                           <!--ng-click="changeProfilePic(image)">-->
                                 </div>
                             </div>
                         </div>
