--- a/src/app/main/managephotos/managephoto.html
+++ b/src/app/main/managephotos/managephoto.html
@@ -192,8 +192,8 @@
                                     <img style="height: 150px" ng-src="{{image.image}}" alt="{{image.description}}">
                                 </div>
                                 <div  style="margin-top: -55px;margin-left: 15px;margin-bottom: 10px">
-                                    <a  title='Change Profile Picture' ng-click="changeProfilePic(image)"><i class="icon-check" style="font-size: 20px"></i></a>
-                                    <a title='Remove' ng-click="removeProfilePic(image)"><i class="icon-close" style="font-size: 20px;color: red"></i></a>
+                                    <a  title='Set as Profile Picture' ng-click="changeProfilePic(image)"><i class="fa fa-check-circle" style="font-size: 20px"></i></a>
+                                    <a title='Remove' ng-click="removeProfilePic(image)"><i class="fa fa-close" style="font-size: 20px;color: red"></i></a>
                                     <!--<input type="checkbox" ng-model="profilePic" ng-value="{{image.number}}"-->
                                            <!--ng-click="changeProfilePic(image)">-->
                                 </div>
