--- a/src/app/main/searchresults/searchresults.html
+++ b/src/app/main/searchresults/searchresults.html
@@ -72,7 +72,7 @@
                     <div class="portlet light bordered">
                         <div class="portlet-title" style="border-bottom: 0px">
                             <div class="caption ">
-                                <span class="caption-subject font-red-sunglo bold"> {{item.name}}</span> <span>({{item.id_people}})</span>
+                                <a ng-click="viewProfile(item.id_people)"><span class="caption-subject font-red-sunglo bold"> {{item.name}}</span> <span>({{item.id_people}})</span></a>
                                 <br/>
                                 <span ng-if="item.profile_for != null && item.profile_for != ''" style="font-size: 9px"> Profile created by {{item.profile_for}}</span>
                             </div>
